Changes in robustHD version 0.1.1

    + Bugfixes in C++ code for sparseLTS() and fastLasso() to prevent memory 
      related errors.