@@ -48,12 +48,10 @@ S3method(winsorize,default)
 S3method(winsorize,matrix)
 export(coefPlot)
 export(corHuber)
-export(correctEigVal)
 export(critPlot)
 export(cvRlars)
 export(cvSparseLTS)
 export(diagnosticPlot)
-export(fastRlars)
 export(lambda0)
 export(rlars)
 export(robStandardize)
